Fix header height and logo alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -113,8 +113,8 @@ p, li {
     }
 
 .header{
-	margin-top: 20px;
-	padding: 50px 0;
+	margin-top: 0px;
+	padding: 100px 0;
 }
 .heading-icon{
 	margin-top: 79px;
@@ -228,18 +228,19 @@ ul.nav.navbar-nav li a{
 	font-size: 15px;
 }
 .logo {
-	position: relative;
-	top: -47px;
-	left: 5px;
-	border-bottom: none;
+	max-height: 60px;
+  	height: auto;
+  	top: 0;
+  	left: 0;
+  	position: relative;
 }
 @media (max-width: 768px){
 	.logo {
-	position: relative;
-	top: 5px;
-	bottom: 5px;
-	left: -18px;
-	float:left;
+	max-height: 60px;
+  	height: auto;
+  	top: 0;
+  	left: 0;
+  	position: relative;
 	}
 }
 
